# competitive-programming

./: .gitignore  CMakeLists.txt  Makefile  readme.md
codeforces/: CMakeLists.txt  test.cpp
codeforces/contests/round1006div3/: CreatingKeysForStoragesHasBecomeMyMainSkill2072C.cpp  HavingBeenATreasurerInThePastIHelpGoblinsDecieve2072B.cpp
codeforces/contests/round1009div3/: TheThirdSide2074B.cpp
codeforces/contests/round1013div3/: PlaceOfTheOlympiad2091D.cpp
codeforces/contests/round1020div3/: StChroma2016B.cpp
codeforces/contests/round1034div3/: BlackboardGame2123A.cpp
codeforces/cp-31/800/: AmbitiousKid1866A.cpp  ArrayColoring1857A.cpp  BlankSpace1829B.cpp  Buttons1858A.cpp  Coins1814A.cpp  Desorting1853A.cpp  ForbiddenInteger1845A.cpp  GameWithIntegers1899A.cpp  GoalsOfVictory1877A.cpp  GrasshopperOnALine1837A.cpp  HowMuchDoesDaytonaCost1878A.cpp  SequenceGame1862B.cpp  TargetPractice1873C.cpp  TwinPermutations1831A.cpp  UnitArray1834A.cpp  UnitedWeStand1859A.cpp
codeforces/gym/topic-stream-mashup-graphs/: NewsDistribution.cpp
codeforces/gym/topic-stream-mashup-number-theory/: NewYearAndTheSphereTransmission.cpp
codeforces/problem-set/: Dragons230A.cpp  Football96A.cpp  SkibidusAndSigma2065D.cpp
codeforces/test-cases/cp-31/800/: AmbitiousKid1866A.txt  BlankSpace1829B.txt  UnitedWeStand1859A.txt
codejam/: CodejamMain.cpp  CodejamTest.txt
contests/round1006div3/: ForWizardsTheExamIsEasyButICouldntHandleIt2072D.cpp  NewWorldNewMeNewArray2072A.cpp
contests/round1009div3/: DrawASquare2074A.cpp  XORAndTriangle2074C.cpp
contests/round1013div3/: CombinationLock2091C.cpp  OlympiadDate2091A.cpp
contests/round1016div3/: IdealGenerator2093A.cpp
contests/round1017div4/: BobrittoBandito2094B.cpp  BrrBrrPatapim2094C.cpp  TrippiTroppi2094A.cpp
contests/round1020div3/: CherryBomb2106C.cpp  DrTC2106A.cpp
contests/round998div3/: FarmerJohnsCardGame2060B.cpp  Fibonacciness2060A.cpp  GameOfMathletes2060C.cpp
cp-31/800/: CoverInWater1900A.cpp  HalloumiBoxes1903A.cpp  JaggedSwaps1896A.cpp  LineTrip1901A.cpp
gym/topic-stream-mashup-graphs/: NewYearTransportation.cpp  Rumor.cpp
gym/topic-stream-mashup-number-theory/: CatCycle.cpp  EhabAndGcd.cpp  MaximumGCD.cpp
leetcode/: CMakeLists.txt  test.cpp
problem-set/: TeamTraining2091B.cpp
