cmake_minimum_required(VERSION 3.29)
project(codeforces_cpp)

set(CMAKE_CXX_STANDARD 17)

# Problem Set
add_executable(Football96A problem-set/Football96A.cpp)
add_executable(Dragons230A problem-set/Dragons230A.cpp)
add_executable(SkibidusAndSigma2065D problem-set/SkibidusAndSigma2065D.cpp)

# Contest Round 1009 Div 3
add_executable(DrawASquare2074A contests/round1009div3/DrawASquare2074A.cpp)
add_executable(TheThirdSide2074B contests/round1009div3/TheThirdSide2074B.cpp)
add_executable(XORAndTriangle2074C contests/round1009div3/XORAndTriangle2074C.cpp)

# Contest Round 1016 Div 3
add_executable(IdealGenerator2093A contests/round1016div3/IdealGenerator2093A.cpp)

# Contest Round 1017 Div 4
add_executable(TrippiTroppi2094A contests/round1017div4/TrippiTroppi2094A.cpp)
add_executable(BobrittoBandito2094B contests/round1017div4/BobrittoBandito2094B.cpp)
add_executable(BrrBrrPatapim2094C contests/round1017div4/BrrBrrPatapim2094C.cpp)
add_executable(TeamTraining2091B problem-set/TeamTraining2091B.cpp)

# Gym: Topic Stream Mashup Graphs
add_executable(NewYearTransportation gym/topic-stream-mashup-graphs/NewYearTransportation.cpp)
add_executable(Rumor gym/topic-stream-mashup-graphs/Rumor.cpp)
add_executable(NewsDistribution gym/topic-stream-mashup-graphs/NewsDistribution.cpp)

# Gym: Topic Stream Mashup Number Theory
add_executable(MaximumGCD gym/topic-stream-mashup-number-theory/MaximumGCD.cpp)
add_executable(EhabAndGcd gym/topic-stream-mashup-number-theory/EhabAndGcd.cpp)
add_executable(CatCycle gym/topic-stream-mashup-number-theory/CatCycle.cpp)
add_executable(NewYearAndTheSphereTransmission gym/topic-stream-mashup-number-theory/NewYearAndTheSphereTransmission.cpp)

# Contest Round 1013 Div 3
add_executable(OlympiadDate2091A contests/round1013div3/OlympiadDate2091A.cpp)
add_executable(CombinationLock2091C contests/round1013div3/CombinationLock2091C.cpp)
add_executable(PlaceOfTheOlympiad2091D contests/round1013div3/PlaceOfTheOlympiad2091D.cpp)

# Contest Round 1006 Div 3

add_executable(NewWorldNewMeNewArray2072A contests/round1006div3/NewWorldNewMeNewArray2072A.cpp)
add_executable(HavingBeenATreasurerInThePastIHelpGoblinsDecieve2072B contests/round1006div3/HavingBeenATreasurerInThePastIHelpGoblinsDecieve2072B.cpp)
add_executable(ForWizardsTheExamIsEasyButICouldntHandleIt2072D contests/round1006div3/ForWizardsTheExamIsEasyButICouldntHandleIt2072D.cpp)
add_executable(CreatingKeysForStoragesHasBecomeMyMainSkill2072C contests/round1006div3/CreatingKeysForStoragesHasBecomeMyMainSkill2072C.cpp)

# Contest Round 998 Div 3

add_executable(Fibonacciness2060A contests/round998div3/Fibonacciness2060A.cpp)
add_executable(FarmerJohnsCardGame2060B contests/round998div3/FarmerJohnsCardGame2060B.cpp)
add_executable(GameOfMathletes2060C contests/round998div3/GameOfMathletes2060C.cpp)

# Contest Round 1020 Div 3

add_executable(DrTC2106A contests/round1020div3/DrTC2106A.cpp)
add_executable(StChroma2106B contests/round1020div3/StChroma2016B.cpp)
add_executable(CherryBomb2106C contests/round1020div3/CherryBomb2106C.cpp)

# CP-31: 800
add_executable(HalloumiBoxes1903A cp-31/800/HalloumiBoxes1903A.cpp)
add_executable(LineTrip1901A cp-31/800/LineTrip1901A.cpp)
add_executable(CoverInWater1900A cp-31/800/CoverInWater1900A.cpp)
add_executable(GameWithIntegers1899A cp-31/800/GameWithIntegers1899A.cpp)
add_executable(HowMuchDoesDaytonaCost1878A cp-31/800/HowMuchDoesDaytonaCost1878A.cpp)
add_executable(SequenceGame1826b cp-31/800/SequenceGame1862B.cpp)
add_executable(UnitedWeStand1859A cp-31/800/UnitedWeStand1859A.cpp)
add_executable(Buttons1858A cp-31/800/Buttons1858A.cpp)
add_executable(ArrayColoring1857A cp-31/800/ArrayColoring1857A.cpp)
add_executable(Desorting1853A cp-31/800/Desorting1853A.cpp)
add_executable(ForbiddenInteger1845A cp-31/800/ForbiddenInteger1845A.cpp)
add_executable(GrasshopperOnALine1837A cp-31/800/GrasshopperOnALine1837A.cpp)
add_executable(UnitArray1834A cp-31/800/UnitArray1834A.cpp)
add_executable(TwinPermutations1831A cp-31/800/TwinPermutations1831A.cpp)
add_executable(BlankSpace1829B cp-31/800/BlankSpace1829B.cpp)
