cmake_minimum_required(VERSION 3.30)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(ContainsDuplicate217 neetcode-150/arrays-and-hashing/ContainsDuplicate217.cpp
        neetcode-150/arrays-and-hashing/TwoSum1.cpp)
add_executable(ValidPalindrome125 neetcode-150/two-pointers/ValidPalindrome125.cpp)
add_executable(BestTimeToBuyAndSellStock121 neetcode-150/sliding-window/BestTimeToBuyAndSellStock121.cpp)
add_executable(ValidParentheses20 neetcode-150/stack/ValidParentheses20.cpp)
add_executable(BinarySearch704 neetcode-150/binary-search/BinarySearch704.cpp)
add_executable(ReverseLinkedList206 neetcode-150/linked-list/ReverseLinkedList206.cpp)
add_executable(MergeTwoSortedLists21 neetcode-150/linked-list/MergeTwoSortedLists21.cpp)
add_executable(NumberOfIslands200 neetcode-150/graphs/NumberOfIslands200.cpp)
add_executable(ClimbingStairs70 neetcode-150/1d-dynamic-programming/ClimbingStairs70.cpp)
add_executable(MinCostClimbingStairs746 neetcode-150/1d-dynamic-programming/MinCostClimbingStairs746.cpp)
add_executable(HappyNumber202 neetcode-150/math-and-geometry/HappyNumber202.cpp)
add_executable(PlusOne66 neetcode-150/math-and-geometry/PlusOne66.cpp)
add_executable(GroupAnagrams49 neetcode-150/arrays-and-hashing/GroupAnagrams49.cpp)
add_executable(TopKFrequentElements347 neetcode-150/arrays-and-hashing/TopKFrequentElements347.cpp)
add_executable(test test.cpp)
